--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -34,6 +34,54 @@ body {
 .pairs-icon img {
   height: 50px; }
 
+.register-page, .sign-in-page {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url('/img/img-1.jpg');
+  background-position: 50%;
+  text-align: center;
+  padding: 6em 2em;
+
+  .controls {
+    margin-top: 1em;
+
+    button {
+      padding: 11px 22px;
+    }
+  }
+
+  a.sign-in, a.register {
+    color: white;
+    font-weight: bold;
+    margin-left: 2em;
+  }
+
+  .input {
+    margin: 10px auto 8px auto;
+    background: white;
+    width: 24em;
+    padding: 0 40px 8px 15px;
+    border-radius: 9px;
+    position: relative;
+    text-align: left;
+  }
+
+  md-input-group.md-default-theme input, md-input-group.md-default-theme textarea {
+    width: 100%;
+  }
+
+  .md-2x {
+    position: absolute;
+    right: 11px;
+    top: 17px;
+  }
+
+  .ic-check-circle:before {
+    color: #03a9f4;
+  }
+}
+
 .sidenav ul {
   margin: 0;
   padding: 0;
@@ -98,7 +146,7 @@ body {
   line-height: 25px; }
 
 .paper-toolbar {
-  background-color: #20608b !important; } 
+  background-color: #20608b !important; }
 
 .icon-demo md-icon {
   font-size: 24px;
@@ -117,11 +165,11 @@ body {
   border-radius: 30px;
   border: 1px solid #ddd;
   width: 48px;
-  margin: 16px; }  
+  margin: 16px; }
 
 .list-demo span.them {
   border: 1px solid #ddd;
-  margin: 16px; 
+  margin: 16px;
   background: #de4e43;
   border-radius: 30px;
   // border-radius: 0.8em;
@@ -134,14 +182,14 @@ body {
   margin-right: 5px;
   text-align: center;
   font-size: 24px;
-  // width: 1.6em; 
-  width: 48px; 
+  // width: 1.6em;
+  width: 48px;
 
 }
 
 .list-demo span.me {
   border: 1px solid #ddd;
-  margin: 16px; 
+  margin: 16px;
   background: #2c97df;
   border-radius: 30px;
   // border-radius: 0.8em;
@@ -154,6 +202,6 @@ body {
   margin-right: 5px;
   text-align: center;
   font-size: 24px;
-  // width: 1.6em; 
-  width: 48px; 
+  // width: 1.6em;
+  width: 48px;
 }
