tweak the sign-in page checkmarkes

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -77,6 +77,12 @@ body {
     top: 17px;
   }
 
+  md-icon {
+    position: absolute;
+    top: 23px;
+    right: 6px;
+  }
+
   .ic-check-circle:before {
     color: #03a9f4;
   }
