--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,7 +5,7 @@
 }
 
 // Import icon font, I've used Entypo (http://entypo.com/)
-@import url(http://weloveiconfonts.com/api/?family=entypo);
+@import "fonts";
 
 // List of icon unicode symbols from the icon font
 // and background colours for the icons
