--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,7 +6,7 @@
 
 // Import icon font, I've used Entypo (http://entypo.com/)
 @import "fonts";
-// @import "forkme";
+@import "forkme";
 
 // List of icon unicode symbols from the icon font
 // and background colours for the icons
