--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -256,6 +256,14 @@ md-nav-container {
       height: 50px;
     }
 
+    img.nonface {
+      margin-right: 1em;
+      position: relative;
+      top: 19px;
+      width: 50px;
+      height: 50px;
+    }
+
     .filepicker {
       display: inline-block;
       position: relative;
@@ -312,6 +320,12 @@ md-nav-container {
 .list-demo .face {
   border-radius: 30px;
   border: 1px solid #ddd;
+  width: 48px;
+  margin: 16px; }
+
+.list-demo .nonface {
+  // border-radius: 30px;
+  // border: 1px solid #ddd;
   width: 48px;
   margin: 16px; }
 
@@ -416,7 +430,7 @@ md-nav-container {
     padding-right: 10px;
   }
 
-  input {
+  textarea {
     margin-right: 5px;
     width: 100%;
   }
@@ -425,3 +439,7 @@ md-nav-container {
     display: table-cell;
   }
 }
+
+ .md-primary  {
+    line-height: 50px;
+  }
